style: fix visiblity of genre cards with a temp styling

--- a/FantasticNineWebAndAPI/src/main/resources/static/css/landingStyles.css
+++ b/FantasticNineWebAndAPI/src/main/resources/static/css/landingStyles.css
@@ -143,12 +143,35 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.8); /* Change this to adjust the darkness */
+    background: rgba(0, 0, 0, 0.8);
     z-index: 1;
 }
 
 .header-background .container {
     position: relative;
     z-index: 2;
+}
+
+/* genre specific css*/
+
+.genre-card-container {
+    flex: 0 0 auto;
+    width: 20%;
+    margin-right: 10px;
+}
+
+.genre-carousel-container {
+    display: flex;
+    justify-content: center;
+}
+
+.genre-carousel-card {
+    width: 100%;
+    background-color: #2c2c2c;
+    border: 1px solid #444;
+}
+
+.genre-card-title {
+    color: #ffffff;
 }
 
